--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -38,18 +38,18 @@
     </div>
 
     <div id="test2" class="col s12">
-      Test 2
+      AMIGOS
     </div>
 
     <div id="test3" class="col s12">
-      Test 3
+      
+  </div>
+
     </div>
 
     <div id="test4" class="col s12">
-      Test 4
+      SHOP
     </div>
-
-
 
 
 
