subiendo vista splash y formulario de inicio de sesion

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,21 @@
 
 body {
-  background-color: white;
+  background-image:url(../assets/images/foodheart.jpg);
+  	background-size:cover;
+    background-position:center;
 }
 
 .parallax-container {
   height: 300px;
+}
+
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
