--- a/views/eventos.html
+++ b/views/eventos.html
@@ -35,7 +35,7 @@
   <main>
     <div class="parallax-container">
     	<div class="parallax">
-    		<img src="assets/images/icecream.jpg">
+    		<img src="../assets/images/icecream.jpg">
     	</div>
     </div>
     <div class="section white">
@@ -44,7 +44,7 @@
     			<div class="col s12 l12">
     				<div class="card">
     					<div class="card-image">
-    						<img src="assets/images/expohelado.jpg" alt="logo expohelado">
+    						<img src="../assets/images/expohelado.jpg" alt="logo expohelado">
     						<span class="card title">Feria del helado</span>
     					</div>
     					<div class="card-content">
@@ -63,7 +63,7 @@
     <!--termina feria del helado-->
     <div class="parallax-container">
     	<div class="parallax">
-    		<img src="assets/images/tortillasoup.png">
+    		<img src="../assets/images/tortillasoup.png">
     	</div>
     </div>
     <div class="section white">
@@ -72,7 +72,7 @@
     			<div class="col s12 l12">
     				<div class="card">
     					<div class="card-image">
-    						<img src="assets/images/mexmanos.png" alt="logo expohelado">
+    						<img src="../assets/images/mexmanos.png" alt="logo expohelado">
     						<span class="card title"> Mexico con las manos </span>
     					</div>
     					<div class="card-content">
@@ -92,7 +92,7 @@
 
         <div class="parallax-container">
           <div class="parallax">
-            <img src="assets/images/deli.png">
+            <img src="../assets/images/deli.png">
           </div>
         </div>
         <div class="section white">
@@ -101,7 +101,7 @@
               <div class="col s12 l12">
                 <div class="card">
                   <div class="card-image">
-                    <img src="assets/images/GOURMET18.jpg" alt="logo Expo cafe y gourmet 2018">
+                    <img src="../assets/images/GOURMET18.jpg" alt="logo Expo cafe y gourmet 2018">
                     <span class="card title"> Gourmet Show México: La feria </span>
                   </div>
                   <div class="card-content">
@@ -120,7 +120,7 @@
 
     <div class="parallax-container">
     	<div class="parallax">
-    		<img src="assets/images/cupcoffe.png">
+    		<img src="../assets/images/cupcoffe.png">
     	</div>
     </div>
     <div class="section white">
@@ -129,7 +129,7 @@
     			<div class="col s12 l12">
     				<div class="card">
     					<div class="card-image">
-    						<img src="assets/images/cafe2018.jpg" alt="logo Expo cafe y gourmet 2018">
+    						<img src="../assets/images/cafe2018.jpg" alt="logo Expo cafe y gourmet 2018">
     						<span class="card title"> Expo cafe y gourmet 2018 </span>
     					</div>
     					<div class="card-content">
@@ -147,7 +147,7 @@
     </div>
     <div class="parallax-container">
       <div class="parallax">
-        <img src="assets/images/coffebeans.png">
+        <img src="../assets/images/coffebeans.png">
       </div>
     </div>
     <div class="section white">
@@ -156,7 +156,7 @@
           <div class="col s12 l12">
             <div class="card">
               <div class="card-image">
-                <img src="assets/images/expocafe.png" alt="logo Expo cafe y gourmet 2018">
+                <img src="../assets/images/expocafe.png" alt="logo Expo cafe y gourmet 2018">
                 <span class="card title"> Expo Café México: la feria </span>
               </div>
               <div class="card-content">
@@ -178,6 +178,6 @@
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
   </body>
 </html>
