--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -27,29 +27,52 @@
           <ul class="tabs tabs-transparent">
             <li class="tab"><a href="#test1">Inicio</a></li>
             <li class="tab"><a href="#test2">Amigos</a></li>
-            <li class="tab"><a href="#test3">Eventos</a></li>
+            <li class="tab"><a href="./miredsocial/views/eventos.html">Eventos</a></li>
             <li class="tab"><a href="#test4">Shop</a></li>
           </ul>
         </div>
     </nav>
 
     <div id="test1" class="col s12">
-      <img class="responsive-img" src="cool_pic.jpg">
+      <img class="responsive-img" src="../assets/images/pinkmaca.jpg">
     </div>
-
+<p>INICIO</p>
     <div id="test2" class="col s12">
-      AMIGOS
+      <p>AMIGOS</p>
     </div>
 
     <div id="test3" class="col s12">
-      
+<p>EVENTOS</p>
   </div>
 
-    </div>
-
     <div id="test4" class="col s12">
-      SHOP
+      <p>SHOP</p>
     </div>
+    <footer class="page-footer">
+             <div class="container">
+               <div class="row">
+                 <div class="col l6 s12">
+                   <h5 class="white-text">Footer Content</h5>
+                   <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                 </div>
+                 <div class="col l4 offset-l2 s12">
+                   <h5 class="white-text">Links</h5>
+                   <ul>
+                     <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                     <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                     <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                     <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                   </ul>
+                 </div>
+               </div>
+             </div>
+             <div class="footer-copyright">
+               <div class="container">
+               © 2014 Copyright Text
+               <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+               </div>
+             </div>
+           </footer>
 
 
 
