--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="widht=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MI RED SOCIAL</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -28,7 +28,7 @@
             <li class="tab"><a href="#test1">Inicio</a></li>
             <li class="tab"><a href="#test2">Amigos</a></li>
             <li class="tab"><a href="./miredsocial/views/eventos.html">Eventos</a></li>
-            <li class="tab"><a href="#test4">Shop</a></li>
+            <li class="tab"><a href="../miredsocial/views/shop.html#">Shop</a></li>
           </ul>
         </div>
     </nav>
