--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <nav class="nav-extended background-header">
@@ -17,7 +17,7 @@
           <a href="perfil.html" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">restaurant</i></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="perfil.html">Mi perfil</a></li>
-            <li><a href="collapsible.html">Salir</a></li>
+            <li><a href="pagina1.html">Salir</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
             <li><a href="sass.html">Sass</a></li>
@@ -95,11 +95,337 @@
     </div>
 
     <div id="test3" class="col s12">
-      Test 3
+      <main>
+        <div class="parallax-container">
+          <div class="parallax">
+            <img src="../assets/images/icecream.jpg">
+          </div>
+        </div>
+        <div class="section white">
+          <div class="row container">
+            <div class="row">
+              <div class="col s12 l12">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="../assets/images/expohelado.jpg" alt="logo expohelado">
+                    <span class="card title">Feria del helado</span>
+                  </div>
+                  <div class="card-content">
+                    <p>
+                       Feria internacional del helado 2018 Ciudad de México, celebrará este año una nueva edición en esta ciudad mexicana entre los próximos días 22 al 24 de febrero de 2018 en las instalaciones del recinto Pepsi Center WTC.
+                    </p>
+                  </div>
+                  <div class="card-action">
+                    <a href="http://www.feriadelhelado.com/">Mas info aqui...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--termina feria del helado-->
+        <div class="parallax-container">
+          <div class="parallax">
+            <img src="../assets/images/tortillasoup.png">
+          </div>
+        </div>
+        <div class="section white">
+          <div class="row container">
+            <div class="row">
+              <div class="col s12 l12">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="../assets/images/mexmanos.png" alt="logo expohelado">
+                    <span class="card title"> Mexico con las manos </span>
+                  </div>
+                  <div class="card-content">
+                    <p>
+                       México con las Manos 2018 Ciudad de México, celebrará este año su tercera edición entre los próximos días 30 de junio al 02 de julio de 2018 en a explanada municipal de Tlalnepantla.
+                    </p>
+                  </div>
+                  <div class="card-action">
+                    <a href="http://mexicoconlasmanos.com/">Mas info aqui...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--termina mexico con las manos-->
+
+        <div class="parallax-container">
+          <div class="parallax">
+            <img src="../assets/images/deli.png">
+          </div>
+        </div>
+        <div class="section white">
+          <div class="row container">
+            <div class="row">
+              <div class="col s12 l12">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="../assets/images/GOURMET18.jpg" alt="logo Expo cafe y gourmet 2018">
+                    <span class="card title"> Gourmet Show México: La feria </span>
+                  </div>
+                  <div class="card-content">
+                    <p>Vino, licor, aceite, vinagre, especias, café, té, queso, conservas, confituras y cualquier producto alimentario con Denominación de Origen y de alta calidad tiene un lugar de excepción en Gourmet Show.</p>
+                  </div>
+                  <div class="card-action">
+                    <a href="http://www.tradex.mx/gourmet/">Mas info aqui...</a>
+                  </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="parallax-container">
+          <div class="parallax">
+            <img src="../assets/images/cupcoffe.png">
+          </div>
+        </div>
+        <div class="section white">
+          <div class="row container">
+            <div class="row">
+              <div class="col s12 l12">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="../assets/images/cafe2018.jpg" alt="logo Expo cafe y gourmet 2018">
+                    <span class="card title"> Expo cafe y gourmet 2018 </span>
+                  </div>
+                  <div class="card-content">
+                    <p>
+                       Expo Café & Gourmet 2018 Guadalajara será una exposición que fusiona lo mejor de Expo Café y Gourmet Show, los dos eventos que marcan las tendencias gastronómicas en México.
+                    </p>
+                  </div>
+                  <div class="card-action">
+                    <a href="http://www.tradex.mx/CyGGuadalajara/">Mas info aqui...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="parallax-container">
+          <div class="parallax">
+            <img src="../assets/images/coffebeans.png">
+          </div>
+        </div>
+        <div class="section white">
+          <div class="row container">
+            <div class="row">
+              <div class="col s12 l12">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="../assets/images/expocafe.png" alt="logo Expo cafe y gourmet 2018">
+                    <span class="card title"> Expo Café México: la feria </span>
+                  </div>
+                  <div class="card-content">
+                    <p>Expo Café es el sitio ideal para desarrollar negocios entorno al café o simplemente degustar una buena taza... Promovemos el consumo de café de calidad y te brindamos contacto con toda la industria para que tu negocio crezca.
+                    </p>
+                  </div>
+                  <div class="card-action">
+                    <a href="http://www.tradex.mx/expocafe/">Mas info aqui...</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+           <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Links</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © 2014 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <div id="test4" class="col s12">
-      Test 4
+      <div class="container">
+       <div class="row">
+      	 <h4 class="center-align tittles">PRODUCTOS</h4>
+      	 <div class="col s12 m6 l4">
+           <div class="card">
+      			 <div class="card-image waves-effect waves-block waves-light">
+      				 <img class="activator" src="../assets/images/market.jpg">
+      			 </div>
+      			 <div class="card-content">
+      				 <span class="card-title activator grey-text text-darken-4">Card Title</span>
+      				 <p><a href="#">This is a link</a></p>
+      			 </div>
+      			 <div class="card-reveal">
+      				 <spa  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      				 <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      			 </div>
+      		 </div>
+      	 </div>
+      	 <div class="col s12 m6 l4">
+      		 <div class="card">
+      			 <div class="card-image waves-effect waves-block waves-light">
+      				 <img class="activator" src="../assets/images/market.jpg">
+      			 </div>
+      			 <div class="card-content">
+      				 <span class="card-title activator grey-text text-darken-4">Card Title</span>
+      				 <p><a href="#">This is a link</a></p>
+      			 </div>
+      			 <div class="card-reveal">
+      					 <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      				 <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      			 </div>
+      		 </div>
+      	 </div>
+      	 <div class="col s12 m6 l4">
+      		 <div class="card">
+      			 <div class="card-image waves-effect waves-block waves-light">
+      				 <img class="activator" src="../assets/images/market.jpg">
+      			 </div>
+             <div class="card-content">
+      					<span class="card-title activator grey-text text-darken-4">Card Title</span>
+      					<p><a href="#">This is a link</a></p>
+      			 </div>
+      						<div class="card-reveal">
+      						  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      					</div>
+      				</div>
+      				<div class="col s12 m6 l4">
+      					<div class="card">
+      						<div class="card-image waves-effect waves-block waves-light">
+      							<img class="activator" src="../assets/images/market.jpg">
+      						</div>
+      						<div class="card-content">
+      						<span class="card-title activator grey-text text-darken-4">Card Title</span>
+      							<p><a href="#">This is a link</a></p>
+      						</div>
+      						<div class="card-reveal">
+      							  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      					</div>
+      				</div>
+      				<div class="col s12 m6 l4">
+      					<div class="card">
+      						<div class="card-image waves-effect waves-block waves-light">
+      							<img class="activator" src="../assets/images/market.jpg">
+      						</div>
+      						<div class="card-content">
+      							<span class="card-title activator grey-text text-darken-4">Card Title</i></span>
+      							<p><a href="#">This is a link</a></p>
+      						</div>
+      						<div class="card-reveal">
+      						  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      					</div>
+      				</div>
+              <div class="col s12 m6 l4">
+      					<div class="card">
+      						<div class="card-image waves-effect waves-block waves-light">
+      							<img class="activator" src="../assets/images/market.jpg">
+      						</div>
+      						<div class="card-content">
+      							<span class="card-title activator grey-text text-darken-4">Card Title</i></span>
+      							<p><a href="#">This is a link</a></p>
+      						</div>
+      						<div class="card-reveal">
+      						  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      					</div>
+      				</div>
+              <div class="col s12 m6 l4">
+      					<div class="card">
+      						<div class="card-image waves-effect waves-block waves-light">
+      							<img class="activator" src="../assets/images/market.jpg">
+      						</div>
+      						<div class="card-content">
+      							<span class="card-title activator grey-text text-darken-4">Card Title</span>
+      							<p><a href="#">This is a link</a></p>
+      						</div>
+      						<div class="card-reveal">
+      							   <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      					</div>
+      				</div>
+              <div class="col s12 m6 l4">
+      					<div class="card">
+      						<div class="card-image waves-effect waves-block waves-light">
+      							<img class="activator" src="../assets/images/market.jpg">
+      						</div>
+      						<div class="card-content">
+      							<span class="card-title activator grey-text text-darken-4">ESTA SIRVE</span>
+      							<p><a href="#">This is a link</a></p>
+      						</div>
+      						<div class="card-reveal">
+      						  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      					</div>
+      				</div>
+      				<div class="col s12 m6 l4">
+      					<div class="card">
+      						<div class="card-image waves-effect waves-block waves-light">
+      							<img class="activator" src="../assets/images/market.jpg">
+      						</div>
+      						<div class="card-content">
+      							<span class="card-title activator grey-text text-darken-4">FIXED</span>
+      							<p><a href="#">This is a link</a></p>
+      						</div>
+      						<div class="card-reveal">
+      							  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      							<p>Here is some more information about this product that is only revealed once clicked on.</p>
+      						</div>
+      				</div>
+              </div>
+      			</div>
+      		</div>
+   <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+           <h5 class="white-text">Footer Content</h5>
+          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        </div>
+          <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
     </div>
 
 
