--- a/css/form.css
+++ b/css/form.css
@@ -1,19 +1,20 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(../assets/images/macaronbig.jpg);
+  background: url(../assets/images/fotofood.jpeg);
   background-size:cover;
   background-repeat: no-repeat;
   font-family: sans-serif;
+  height: 100vh;
 }
 
 .loginBox {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 35%;
   transform: translate(-50%,-50%);
   width: 350px;
-  height: 420px;
+  height: 500px;
   padding: 80px 40px;
   box-sizing: border-box;
   background: rgba(0,0,0,.5);
