--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 .parallax-container {
-  height: 300px;
+  height: 200px;
 }
 
 
@@ -18,4 +18,8 @@ body {
 
 main {
   flex: 1 0 auto;
+}
+
+nav-extended {
+  background-color: rgba(255, 255, 255, 0.5);
 }
