--- a/views/newsfeed.html
+++ b/views/newsfeed.html
@@ -29,8 +29,8 @@
           <ul class="tabs tabs-transparent">
             <li class="tab"><a href="#test1">Inicio</a></li>
             <li class="tab"><a href="#test2">Amigos</a></li>
-            <li class="tab"><a href="./miredsocial/views/eventos.html">Eventos</a></li>
-            <li class="tab"><a href="../miredsocial/views/shop.html#">Shop</a></li>
+            <li class="tab"><a href="#test3">Eventos</a></li>
+            <li class="tab"><a href="#test4">Shop</a></li>
           </ul>
         </div>
     </nav>
@@ -153,7 +153,6 @@
           </div>
         </div>
         <!--termina mexico con las manos-->
-
         <div class="parallax-container">
           <div class="parallax">
             <img src="../assets/images/deli.png">
@@ -429,33 +428,6 @@
     </footer>
 
     </div>
-    <footer class="page-footer">
-             <div class="container">
-               <div class="row">
-                 <div class="col l6 s12">
-                   <h5 class="white-text">Footer Content</h5>
-                   <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-                 </div>
-                 <div class="col l4 offset-l2 s12">
-                   <h5 class="white-text">Links</h5>
-                   <ul>
-                     <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                     <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                     <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                     <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                   </ul>
-                 </div>
-               </div>
-             </div>
-             <div class="footer-copyright">
-               <div class="container">
-               © 2014 Copyright Text
-               <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-               </div>
-             </div>
-           </footer>
-
-
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
