--- a/views/pagina1.html
+++ b/views/pagina1.html
@@ -20,7 +20,7 @@
       <label for="password">Contraseña</label>
       <input type="password" id="password" placeholder="Introduzca su contraseña">
 
-      <button id="enter" type="submit" href="newsfeed.html" disabled>Entrar</button>
+      <a id="enter" class="btn disabled" href="newsfeed.html">Entrar</a>
 
 
       <a href="#"> ¡Registrate ahora! </a>
